# ai-cost-tracker

./: .env.example  .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  pyproject.toml  railway.toml  requirements.txt  tsconfig.json
.github/workflows/: ci.yml  test-permissions.yml
agent-os/: config.yml
agent-os/specs/2026-02-05-cost-tracker-mvp/: spec.md
agent-os/specs/2026-02-05-cost-tracker-mvp/planning/: raw-idea.md  requirements.md
agent-os/standards/global/: coding-style.md  tech-stack.md
src/: index.ts
src/db/: index.ts  migrate.ts
src/middleware/: auth.ts  errorHandler.ts
src/routes/: health.ts  models.ts  usage.ts
src/services/: usageService.ts
src/types/: index.ts
src/utils/: pricing.ts
