[project]
name = "ai-cost-tracker"
version = "0.1.0"
description = "AI Cost Tracking API for monitoring platform usage"
requires-python = ">=3.12"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
